manifests/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci-worker-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fibonacci-worker
      version: v1
  template:
    metadata:
      labels:
        app: fibonacci-worker
        version: v1
    spec:
      containers:
      - name: fibonacci-worker
        image: docker.pkg.github.com/hurricankai/fibonacci/worker:v1
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
