manifests/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-api
  labels:
    app: fibonacci-api
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: fibonacci-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci-api-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fibonacci-api
      version: v1
  template:
    metadata:
      labels:
        app: fibonacci-api
        version: v1
    spec:
      containers:
      - name: fibonacci-api
        image: docker.pkg.github.com/hurricankai/fibonacci/api:v1
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 80
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: fibonacci-api-v2
#  labels:
#    version: v2
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: fibonacci-api
#      version: v2
#  template:
#    metadata:
#      labels:
#        app: fibonacci-api
#        version: v2
#    spec:
#      containers:
#      - name: fibonacci-api
#        image: docker.io/istio/examples-fibonacci-v2
#        resources:
#          requests:
#            cpu: "100m"
#        imagePullPolicy: IfNotPresent #Always
#        ports:
#        - containerPort: 5000
