manifests/api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fibonacci-api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fibonacci-api-destination
spec:
  host: fibonacci-api
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fibonacci-api
spec:
  hosts:
  - "*"
  gateways:
  - fibonacci-api-gateway
  http:
  - route:
    - destination:
        host: fibonacci-api
        subset: v1
      weight: 0
    - destination:
        host: fibonacci-api
        subset: v2
      weight: 0
    - destination:
        host: fibonacci-api
        subset: v3
      weight: 100
